[tool.poetry]
name = "rag-demo"
version = "0.1.0"
description = "A RAG based Q&A Chatbot using LangChain"
authors = ["Prabhat Reddy <reddy.prabhat@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain = "^0.3.2"
langchain-ollama = "^0.2.0"
langchain-text-splitters = "^0.3.0"
streamlit = "^1.39.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
